--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
