--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
+    "react-native-webview": "^13.2.2",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
@@ -37,7 +38,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/lodash": "^4.14.195",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
