--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "jetifier": "^2.0.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.8",
+    "react-native-push-notification": "^8.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
