--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.71.8",
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.8",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.3",
